# Brann_olfactory_dorsoventral

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/tables/: Olfr_biomart_mm39_Ensembl_105.csv
dv_score/: util.py
dv_score/preprocess/: filter_bam.py  make_adata.py  util.py
notebooks/: DV_score.ipynb
scripts/: apply_scanvi.py  extract_barcode  nextflow_pipeline.nf  nextflow_with_clonal_barcode.nf  run_scanvi.py  sort_cells
