[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dv_score"
version = "0.0.1"
description = "Analysis scripts for OSN dorsoventral score"
readme = "README.md"
authors = [
    {name = "David Brann"}
]
license = "MIT"
dependencies = [
    "pandas",
    "polars",
    "pyarrow",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
default = ["pandas", "pysam", "scanpy", "anndata"]

[tool.setuptools]
packages = ["dv_score"]

[project.scripts]
filter_bam = "dv_score.preprocess.filter_bam:main"
make_adata = "dv_score.preprocess.make_adata:main"
